--- a/src/components/Profile.module.css
+++ b/src/components/Profile.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 15px;
-    width: 370px;
+    width: 400px;
   }
   
   .description {
@@ -11,14 +11,14 @@
     flex-direction: column;
     align-items: center;
     width: inherit;
-    border-bottom: #7e6f7498 solid 3px;
+    border-bottom: grey solid 3px;
   }
   
   .avatar {
-    width: 300px;
-    box-shadow: 0 0 3px 0px #0000004d;
+    width: 200px;
+    box-shadow: 0 0 3px 0px grey;
     border-radius: 50%;
-    background-color: #e7eeeeed;
+    background-color: white;
     padding: 20px 10px 0px 10px;
   }
   
